test/libsolidity/syntaxTests/nameAndTypeResolution/157_array_of_undeclared_type.sol
contract c {
    a[] public foo;
}
// ----
// DeclarationError 7920: (17-18='a'): Identifier not found or not unique.
